# pantone-specification-mcp

./: README.md  pyproject.toml
src/pantone_specification_mcp/: __init__.py  server.py
